--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- header -->
     <header class="header">
-      <nav class="header-nav">
-        <a class="part-logo link" href="./index.html" lang="en">Web<span class="part2-logo">Studio</span>
-        </a>
+      <div class="conteiner header-conteiner"> 
+        <nav class="header-nav ">
+          <a class="part-logo link" href="./index.html" lang="en">Web<span class="part2-logo">Studio</span></a>
         <ul class="menu list">
           <li class="menu-item">
             <a class="link accent-link" href="./index.html">Студия</a>
@@ -29,24 +30,26 @@
           <li class="menu-item"><a class="menu-link link" href="">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
-        <li class="menu-item list">
+      <ul class="menu-contact">
+        <li class="list contact-item" >
           <a class="cotnact-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
-        <li class="menu-item list">
+        <li class="list contact-item">
           <a class="contact-phone link" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
-      </ul>
+      </ul></div>
+     
     </header>
     <main>
+      <!-- ========HERO======= -->
       <section class="hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <h1 class="hero-title">Эффективные решения <br>для вашего бизнеса</h1>
         <button class="hero-btm" type="button">Заказать услугу</button>
       </section>
     </main>
-    <section class="benefits">
+    <section class="benefits conteiner">
       <h2 hidden>преимущества</h2>
-      <ul class="benefits-list">
+      <ul class="benefits-list ">
         <li class="benefits-item list">
           <h3 class="benefits-title">Внимание к деталям</h3>
           <p class="benefits-text">
@@ -73,7 +76,7 @@
         </li>
       </ul>
     </section>
-    <section>
+    <section class="section-wedo conteiner">
       <h2 class="section-title">Чем мы занимаемся</h2>
       <ul class="wedo-list">
         <li class="wedo-item list">
@@ -88,7 +91,8 @@
       </ul>
     </section>
     <section class="team">
-      <h2 class="basic-title">Наша команда</h2>
+      <div class="conteiner">
+        <h2 class="section-title">Наша команда</h2>
       <ul class="team-list">
         <li class="team-item list">
           <img class="team-img" src="./images/1/team/img.jpg" alt="" height="260" width="270" />
@@ -110,7 +114,8 @@
           <h3 class="team-title">Михаил Ермаков</h3>
           <p class="team-text">UI Designer</p>
         </li>
-      </ul>
+      </ul></div>
+      
     </section>
     <footer class="footer">
       <a class="part-logo link" href="./index.html" lang="en"
