--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       
     </section>
     <footer class="footer">
-      <a class="part-logo link" href="./index.html" lang="en"
+      <div><a class="part-logo link" href="./index.html" lang="en"
           >Web <span class="footer-part2-logo">Studio</span>
       <address class="footer-adress">
         <ul class="footer-list">
@@ -130,7 +130,8 @@
           <li class="footer-item list">
             <a class="footer-phone link"href="tel:+380991111111">+38 099 111 11 11</a></li>
         </ul>
-      </address>
+      </address></div>
+      
     </footer>
   </body>
 </html>
