--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
       <ul class="benefits-list ">
         <li class="benefits-item list">
           <h3 class="benefits-title">Внимание к деталям</h3>
-          <p class="benefits-text">
-            Идейные соображения, а также начало повседневной работы по формированию позиции.
+          <p class="benefits-text">Идейные соображения, а также начало повседневной работы по формированию позиции.
           </p>
         </li>
         <li class="benefits-item list">
@@ -131,7 +130,6 @@
             <a class="footer-phone link"href="tel:+380991111111">+38 099 111 11 11</a></li>
         </ul>
       </address></div>
-      
     </footer>
   </body>
 </html>
