--- a/portfolio.html
+++ b/portfolio.html
@@ -14,51 +14,48 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="header">
-      <nav class="header-nav">
-        <a class="part-logo link" href="./index.html" lang="ru">Web<span class="part2-logo">Studio</span>
-        </a>
+    <header class="header header-portfolio">
+      <div class="conteiner header-conteiner
+      "> 
+        <nav class="header-nav ">
+          <a class="part-logo link" href="./index.html" lang="en">Web<span class="part2-logo">Studio</span></a>
         <ul class="menu list">
           <li class="menu-item">
-            <a class="menu-link link" href="./index.html">Студия</a>
+            <a class="link menu-link" href="./index.html">Студия</a>
           </li>
           <li class="menu-item">
             <a class="accent-link link" href="./portfolio.html">Портфолио</a>
           </li>
-          <li class="menu-item">
-            <a class="menu-link link" href="">Контакты</a></li>
+          <li class="menu-item"><a class="menu-link link" href="">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
-        <li class="menu-item list">
+      <ul class="menu-contact">
+        <li class="list contact-item" >
           <a class="cotnact-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
-        <li class="menu-item list">
+        <li class="list contact-item">
           <a class="contact-phone link" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
-      </ul>
+      </ul></div>
     </header>
     <main>
       <!-- filters -->
-      <section>
-        <h1 hidden>portfolio</h1>
-        <ul class="filters-list">
-          <li class="filters-item list">
-            <button  class="active-btm" type="button">
-                <a class="filters-link link" href=""></a>Все</button>
-          </li>
-          <li class="filters-item list">
+      <section class="portfolio">
+          <div class="conteiner">
+            <h1 hidden>portfolio</h1>
+            <ul class="filters-list">
+              <li class="filters-item list">
+                <button  class="active-btm" type="button">
+                <a class="filters-link link" href=""></a>Все</button></li>
+              <li class="filters-item list">
+                  <button  class="filters-btm" type="button">
+                    <a class="filters-link link" href=""></a>Веб-сайты</button></li>
+              <li class="filters-item list">
             <button  class="filters-btm" type="button">
-                <a class="filters-link link" href=""></a>Веб-сайты</button>
-          </li>
-          <li class="filters-item list">
-            <button  class="filters-btm" type="button">
-                <a class="filters-link link" href=""></a>Приложения</button>
-          </li>
-          <li class="filters-item list">
-            <button  class="filters-btm" type="button"><a class="filters-link link" href=""></a>Дизайн</button>
-          </li>
-          <li class="filters-item list">
+                <a class="filters-link link" href=""></a>Приложения</button></li>
+              <li class="filters-item list">
+            <button  class="filters-btm" type="button"><a class="filters-link link" href=""></a>Дизайн</button></li>         
+            <li class="filters-item list">
             <button  class="filters-btm" type="button"><a class="filters-link link" href=""></a>Маркетинг</button>
           </li>
         </ul>
@@ -110,7 +107,8 @@
             <h3 class="portfolio-title">Growing Business</h3>
             <p class="cases-text">Приложение</p>
           </li>
-        </ul>
+        </ul></div>
+          
       </section>
     </main>
      <footer class="footer">
