--- a/portfolio.html
+++ b/portfolio.html
@@ -15,8 +15,7 @@
   </head>
   <body>
     <header class="header header-portfolio">
-      <div class="conteiner header-conteiner
-      "> 
+      <div class="conteiner header-conteiner"> 
         <nav class="header-nav ">
           <a class="part-logo link" href="./index.html" lang="en">Web<span class="part2-logo">Studio</span></a>
         <ul class="menu list">
