--- a/portfolio.html
+++ b/portfolio.html
@@ -73,46 +73,45 @@
           </li>
           <li class="cases-item list">
             <img class="cases-img" src="./images/2/img.jpg" alt="" width="370" />
-            <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
-            <p class="cases-text">Дизайн</p>
+            <div class="cases-description"><h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
+            <p class="cases-text">Дизайн</p></div>
           </li>
           <li class="cases-item list">
             <img class="cases-img" src="./images/2/img-2.jpg" alt="" width="370" />
-            <h3 class="portfolio-title">Ресторан Seafood</h3>
-            <p class="cases-text">Приложение</p>
+            <div class="cases-description"><h3 class="portfolio-title">Ресторан Seafood</h3>
+            <p class="cases-text">Приложение</p></div>
           </li>
           <li class="cases-item list">
             <img class="cases-img" src="./images/2/img-3.jpg" alt="" width="370" />
-            <h3 class="portfolio-title">Проект Prime</h3>
-            <p class="cases-text">Маркетинг</p>
+            <div class="cases-description"><h3 class="portfolio-title">Проект Prime</h3>
+            <p class="cases-text">Маркетинг</p></div>
           </li> 
           <li class="cases-item list">
             <img class="cases-img" src="./images/2/img-8.jpg" alt="" width="370" />
-            <h3 class="portfolio-title">Проект Boxes</h3>
-            <p class="cases-text">Приложение</p>
+            <div class="cases-description"><h3 class="portfolio-title">Проект Boxes</h3>
+            <p class="cases-text">Приложение</p></div>
           </li>
           <li class="cases-item list">
             <img class="cases-img" src="./images/2/img-4.jpg" alt="" width="370" />
-            <h3 class="portfolio-title">Inspiration has no Borders</h3>
-            <p class="cases-text">Веб-сайт</p>
+            <div class="cases-description"> <h3 class="portfolio-title">Inspiration has no Borders</h3>
+            <p class="cases-text">Веб-сайт</p></div>
           </li>
           <li class="cases-item list">
             <img class="cases-img" src="./images/2/img-5.jpg" alt="" width="370" />
-            <h3 class="portfolio-title">Издание Limited Edition</h3>
-            <p class="cases-text">Дизайн</p>
+             <div class="cases-description"><h3 class="portfolio-title">Издание Limited Edition</h3>
+            <p class="cases-text">Дизайн</p></div>
           </li>
           <li class="cases-item list">
             <img class="cases-img" src="./images/2/img-6.jpg" alt="" width="370" />
-            <h3 class="portfolio-title">Проект LAB</h3>
-            <p class="cases-text">Маркетинг</p>
+            <div class="cases-description"><h3 class="portfolio-title">Проект LAB</h3>
+            <p class="cases-text">Маркетинг</p></div>
           </li>
           <li class="cases-item list">
             <img class="cases-img" src="./images/2/img-7.jpg" alt="" width="370" />
-            <h3 class="portfolio-title">Growing Business</h3>
-            <p class="cases-text">Приложение</p>
+             <div class="cases-description"><h3 class="portfolio-title">Growing Business</h3>
+            <p class="cases-text">Приложение</p></div>
           </li>
-        </ul></div>
-          
+        </ul></div>   
       </section>
     </main>
      <footer class="footer">
