--- a/portfolio.html
+++ b/portfolio.html
@@ -114,6 +114,7 @@
         </ul></div>   
       </section>
     </main>
+    <!-- ========FOOTER======= -->
      <footer class="footer">
       <a class="part-logo link" href="./index.html" lang="en"
           >Web <span class="footer-part2-logo">Studio</span>
