--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </li>
       </ul>
     </section></div>
-      
+      <!-- ======TEAM====== -->
     <section class="team">
       <div class="conteiner">
         <h2 class="section-title">Наша команда</h2>
@@ -120,9 +120,9 @@
           <p class="team-text">UI Designer</p>
         </li>
       </ul></div>
-      
     </section>
     </main>
+    <!-- ========FOOTER======= -->
     <footer class="footer">
       <div class="conteiner">
         <div class="footer-logo"><a class="part-logo link" href="./index.html" lang="en">Web<span class="footer-part2-logo">Studio</span></a></div>
