--- a/index.html
+++ b/index.html
@@ -43,13 +43,12 @@
     </header>
     <main>
       <!-- ========HERO======= -->
-      <section class="hero">
-        <div class="conteiner hero-conteiner">
+      <section class="hero section">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
         <button class="hero-btm" type="button">Заказать услугу</button>
-      </section></div>
+      </section>
        <!-- =========BENEFITS========= -->
-    <section class="benefits">
+    <section class="benefits section">
       <div class="conteiner">
         <h2 hidden>преимущества</h2>
       <ul class="benefits-list">
@@ -79,7 +78,7 @@
       </ul></div>
     </section>
     <!-- ==========wedo======== -->
-    <section class="section-wedo">
+    <section class="section-wedo section">
       <div class="conteiner">
         <h2 class="section-title">Чем мы занимаемся</h2>
       <ul class="wedo-list">
@@ -95,7 +94,7 @@
       </ul>
     </section></div>
       <!-- ======TEAM====== -->
-    <section class="team">
+    <section class="team section">
       <div class="conteiner">
         <h2 class="section-title">Наша команда</h2>
       <ul class="team-list">
